kubernetes/elasticsearch/05-01-deployment-fluentd.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: fluentd
    k8s-app: fluentd
  name: fluentd
  namespace: elasticsearch
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fluentd
      k8s-app: fluentd
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fluentd
        k8s-app: fluentd
    spec:
      containers:
      - env:
        - name: FLUENT_ELASTICSEARCH_HOST
          value: elasticsearch.elasticsearch
        - name: FLUENT_ELASTICSEARCH_PORT
          value: "9200"
        - name: FLUENT_ELASTICSEARCH_SCHEME
          value: http
        image: registry.clickyab.ae/clickyab/fluentd
        imagePullPolicy: Always
        name: fluentd
        resources:
          limits:
            memory: 1500Mi
          requests:
            memory: 1100Mi
      imagePullSecrets:
      - name: regsecret
