kubernetes/elasticsearch/05-02-deployment-grafana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: grafana
  name: grafana
  namespace: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      component: grafana
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        component: grafana
    spec:
      containers:
      - env:
        - name: GF_SERVER_ROOT_URL
          value: http://grafana.clickyab.ae
        - name: GF_SECURITY_ADMIN_PASSWORD
          value: bita102030*
        image: grafana/grafana
        imagePullPolicy: Always
        name: grafana
        ports:
        - containerPort: 3000
          name: grafana
          protocol: TCP
        resources:
          limits:
            cpu: "1"
          requests:
            cpu: 100m
