kubernetes/elasticsearch/05-es-client.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: es-client
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: client
spec:
  replicas: 6
  template:
    metadata:
      labels:
        component: elasticsearch
        role: client
    spec:
      containers:
      - name: es-client
        resources:
          requests:
            memory: "2.5Gi"
          limits:
            memory: "3Gi"
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        image: quay.io/pires/docker-elasticsearch-kubernetes:5.6.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
      volumes:
          - emptyDir:
              medium: ""
            name: "storage"
