kubernetes/elasticsearch/5-2-Deployment-kibana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: kibana
  name: kibana
  namespace: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kibana
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        component: kibana
    spec:
      containers:
      - env:
        - name: CLUSTER_NAME
          value: clickyab
        - name: XPACK_SECURITY_ENABLED
          value: 'false'
        - name: XPACK_GRAPH_ENABLED
          value: 'false'
        - name: XPACK_ML_ENABLED
          value: 'false'
        - name: XPACK_REPORTING_ENABLED
          value: 'false'
        image: cfontes/kibana-xpack-less:5.5.0
        imagePullPolicy: IfNotPresent
        name: kibana
        ports:
        - containerPort: 5601
          name: kibana
          protocol: TCP
        resources:
          limits:
            cpu: '1'
          requests:
            cpu: 100m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
