kubernetes/elasticsearch/06-00-service-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elasticsearch
  labels:
    component: kibana
spec:
  selector:
    component: kibana
  ports:
  - port: 80
    targetPort: 5601
    protocol: TCP
